fixing text spilling over in homepage container for mobile

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ nav .nav-links:hover:not(:first-child) {
   box-shadow: 25px 25px 10px 2px #7d107d;
   margin: 200px auto;
   padding: 10% 0;
+  min-width: 250px;
   width: 50%;
   height: 50%;
 }
@@ -349,7 +350,7 @@ nav .nav-links:hover:not(:first-child) {
 
 @media(max-width: 500px){
   .nav-links{
-    font-size: 0.7em;
+    font-size: 0.5em;
   }
 
   .main-title {
@@ -371,6 +372,7 @@ nav .nav-links:hover:not(:first-child) {
 }
 
 @media (max-width: 460px) {
+ 
   .footer-links {
     font-size: 0.5em;
   }
